[package]
name = "nes_emu2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitflags = "2.1.0"
chrono = "0.4.26"
gfx_device_gl = "0.16.2"
image = "0.24.6"
nes-rom-reader = {path = "../nes-rom-reader"}
num-derive = "0.3.3"
num-traits = "0.2.15"
piston_window = "0.128.0"

[profile.dev]
opt-level = 3

[features]
steprun = []
nestest = []
